Committing modified and update files

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
             <h3><p>Para as farmácias, o software proporcionará um aumento na eficiência operacional, uma melhoria significativa no atendimento
                 ao cliente e a redução de perdas por vencimento de medicamentos. Essas melhorias contribuirão para um serviço mais eficaz e sustentável</p>
             </h3>
-            <img src="docs/MedicineAppConsult.jpg" width="350" height="480" alt="MedicineAppConsult.jpg"/>
+            <img src="img/MedicineAppConsult.jpg" width="350" height="480" alt="MedicineAppConsult.jpg"/>
         </section> 
         <section id="staffTI-container"> 
             <h2>Passos do desenvolvimento do Projeto de Software</h2>
